# misc

dmhelper/: .gitignore  MILESTONE_M0_COMPLETE.md  PROJECT_OUTLINE.md  README.md  RUN_GUIDE.md  docker-compose.yml  outline  requirements.txt
dmhelper/backend/: Dockerfile  M1_IMPLEMENTATION_COMPLETE.md  M2_IMPLEMENTATION_COMPLETE.md  M3_IMPLEMENTATION_COMPLETE.md  M4_IMPLEMENTATION_COMPLETE.md  M5_IMPLEMENTATION_COMPLETE.md  env.example  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_m1_comprehensive.py  test_m2_filewatcher.py  test_m3_basic.py  test_m3_dice_tools.py  test_m4_character_creation.py
dmhelper/backend/app/: main.py
dmhelper/backend/app/api/: routes.py
dmhelper/backend/app/api/endpoints/: __init__.py  characters.py  chat.py  dice.py  encounters.py  knowledge.py
dmhelper/backend/app/core/: __init__.py  config.py
dmhelper/backend/app/services/: __init__.py  background_tasks.py  character_service.py  chat_service.py  creation_wizard.py  dice_engine.py  document_processor.py  encounter_service.py  file_integration.py  file_watcher.py  knowledge_service.py  llm_service.py  template_engine.py  tool_router.py  validation_system.py  vector_store.py
dmhelper/backend/tests/: __init__.py  test_m1_basic.py  test_m1_vector_store.py  test_m3_basic.py  test_m3_dice_tools.py  test_m5_encounters.py  test_main.py
dmhelper/data/campaigns/lore/: TIMELINE.md
dmhelper/frontend/: .eslintrc.json  Dockerfile  M6_IMPLEMENTATION_COMPLETE.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dmhelper/scripts/: dev-setup.sh  init-db.sql  setup-ollama.sh  verify-setup.sh
learnjulia/: cpu_temp_monitor.jl  fourier.jl  fourier_sine_waves.jl  iron_core_diode_analysis.jl  montyhall.jl  montyhall_sim.jl  numberguess.jl  sample_cpu_temps.csv
learnjulia/fantasyfootball/: fantasyREADME.txt  fantasyinput.jl
(+76 files in other folders)
